# ecsonnet

./: README.md  WORKSPACE  containerDefinition.libsonnet  ecs.libsonnet  exampleServiceDefinition.jsonnet  taskDefinition.libsonnet
ecs/: BUILD.bazel  clusterDefinition.libsonnet  ecs.libsonnet  exampleClusterDefinition.jsonnet  exampleContainerDefinition.jsonnet  exampleTaskDefinition.jsonnet  serviceDefinition.libsonnet  taskDefinition.libsonnet
examples/: BUILD.bazel  exampleClusterDefinition.jsonnet  exampleContainerDefinition.jsonnet  exampleServiceDefinition.jsonnet  exampleTaskDefinition.jsonnet
rules_ecs/: BUILD.bazel  ecs_service.bzl  ecs_task.bzl  service.create.sh.tpl  service.delete.sh.tpl  task.register.sh.tpl
